k8s/mongodb-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    description: Exposes the database server
  labels:
    app: nodejs-mongodb-example
    template: nodejs-mongodb-example
    template.openshift.io/template-instance-owner: e6186f20-7af0-11e9-9dcf-023b1fa5415e
  name: mongodb
spec:
  clusterIP: 172.30.75.220
  ports:
    - name: mongodb
      port: 27017
      protocol: TCP
      targetPort: 27017
  selector:
    name: mongodb
  sessionAffinity: None
  type: ClusterIP
