k8s/nodejs-mongodb-example-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: 'true'
  labels:
    app: nodejs-mongodb-example
    template: nodejs-mongodb-example
    template.openshift.io/template-instance-owner: e6186f20-7af0-11e9-9dcf-023b1fa5415e
  name: nodejs-mongodb-example
spec:
  host: nodejs-mongodb-example-rocketeer.apps.serverless-ae07.openshiftworkshop.com
  to:
    kind: Service
    name: nodejs-mongodb-example
    weight: 100
  wildcardPolicy: None
